--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/stockastic_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stockastic'23</title>
+    <meta name="description" content="Stockastic'23 by Dream Merchants VIT" />
+    <title>Stockastic&apos;23</title>
   </head>
   <body style="background-color: #0F0F0F;">
     <div id="root"></div>
