--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" class=" scroll-smooth">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/stockastic_logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Stockastic'23 by Dream Merchants VIT" />
-    <title>Stockastic&apos;23</title>
-  </head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/stockastic_logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Stockastic'23 by Dream Merchants VIT Welcome to an exciting event that will provide you with a holistic grasp of the trading world, while also creating a gathering point for enthusiastic students in the realms of finance and economics. By utilizing state-of-the-art technology and receiving valuable guidance from experienced experts, attendees will have the opportunity to simulate real-life market scenarios and enhance their trading abilities." />
+  <meta name="keywords"
+    content="Stockastic, Stock Market, Dream Merchants VIT, VIT, Content, Design, Vellore Institute of Technology, Dream Merchants, Riviera, Finance, Business, Entrepreneurship, students, student Entrepreneurship, engineering, Entrepreneur, education, college, institute, events">
+  <meta name="author" content="Jay Shah">
+  <meta name="copyright" content="Dream Merchants, VIT">
+  <meta name="language" content="en">
+  <meta name="category" content="General">
+  <meta name="coverage" content="Worldwide">
+  <meta name="rating" content="General">
+  <meta name="og:email" content="dreammerchantsvit@gmail.com">
+  <meta name="og:phone_number" content="+919969138221">
+  <meta name="og:country-name" content="India">
+  <meta name="og:region" content="Vellore, Tamil Nadu">
+  <meta name="og:site_name" content="Stockastic 23">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Stockastic 23">
+  <meta property="og:description"
+    content="Stockastic 23 Welcome to an exciting event that will provide you with a holistic grasp of the trading world, while also creating a gathering point for enthusiastic students in the realms of finance and economics. By utilizing state-of-the-art technology and receiving valuable guidance from experienced experts, attendees will have the opportunity to simulate real-life market scenarios and enhance their trading abilities.">
+  <meta property="og:site_name" content="Stockastic 23">
+  <meta itemprop="name" content="Stockastic 23">
+  <meta itemprop="description"
+    content="Stockastic 23 Welcome to an exciting event that will provide you with a holistic grasp of the trading world, while also creating a gathering point for enthusiastic students in the realms of finance and economics. By utilizing state-of-the-art technology and receiving valuable guidance from experienced experts, attendees will have the opportunity to simulate real-life market scenarios and enhance their trading abilities.">
+
+
+  <title>Stockastic&apos;23</title>
+</head>
+
   <body style="background-color: #0F0F0F;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
