fix: loader and faqs

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
   <meta name="rating" content="General">
   <meta name="og:email" content="dreammerchantsvit@gmail.com">
   <meta name="og:phone_number" content="+919969138221">
-  <meta name="og:country-name" content="India">
+  <meta name="og:country_name" content="India">
   <meta name="og:region" content="Vellore, Tamil Nadu">
-  <meta name="og:site_name" content="Stockastic 23">
+  <meta name="og:site_name" content="Stockastic'23">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Stockastic 23">
+  <meta property="og:title" content="Stockastic'23">
   <meta property="og:description"
-    content="Stockastic 23 Welcome to an exciting event that will provide you with a holistic grasp of the trading world, while also creating a gathering point for enthusiastic students in the realms of finance and economics. By utilizing state-of-the-art technology and receiving valuable guidance from experienced experts, attendees will have the opportunity to simulate real-life market scenarios and enhance their trading abilities.">
-  <meta property="og:site_name" content="Stockastic 23">
-  <meta itemprop="name" content="Stockastic 23">
+    content="Stockastic'23 | Welcome to an exciting event that will provide you with a holistic grasp of the trading world, while also creating a gathering point for enthusiastic students in the realms of finance and economics. By utilizing state-of-the-art technology and receiving valuable guidance from experienced experts, attendees will have the opportunity to simulate real-life market scenarios and enhance their trading abilities.">
+  <meta property="og:site_name" content="Stockastic'23">
+  <meta property="og:image" content="https://svgur.com/i/tk2.svg" />
+  <meta property="og:url" content="https://stockastic.dreammerchantsvit.com/" />
+  <meta itemprop="name" content="Stockastic'23">
   <meta itemprop="description"
-    content="Stockastic 23 Welcome to an exciting event that will provide you with a holistic grasp of the trading world, while also creating a gathering point for enthusiastic students in the realms of finance and economics. By utilizing state-of-the-art technology and receiving valuable guidance from experienced experts, attendees will have the opportunity to simulate real-life market scenarios and enhance their trading abilities.">
-
-
+    content="Stockastic'23 Welcome to an exciting event that will provide you with a holistic grasp of the trading world, while also creating a gathering point for enthusiastic students in the realms of finance and economics. By utilizing state-of-the-art technology and receiving valuable guidance from experienced experts, attendees will have the opportunity to simulate real-life market scenarios and enhance their trading abilities.">
   <title>Stockastic&apos;23</title>
 </head>
 
